--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-
     "start": "node server.js",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
